syntax = "proto2";
package materializer_ondemand;
import "common.proto";

service OnDemandMaterializer {
  rpc Materialize(OnDemandRequest) returns (stream common.RowDefinition);
  rpc Heartbeat (Empty) returns (Empty);
}

message OnDemandRequest {
  required string view_id = 1;
  map<string, Schema> schemas = 2;
}

message Schema {
  repeated string object_ids = 1;
}

message Empty {}
